--- a/style.css
+++ b/style.css
@@ -1,5 +1,162 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+}
+
+header {
+    width: 100vw;
+}
+
+h1 {
+    margin: 0;
+    padding: 20px 50px;
+    font-family: "DotGothic16", sans-serif;
+}
+
+h1::before {
+    content: "/";
+}
+
+main {
+    margin: 0;
+    padding: 50px;
+    background-color: #f1f5f9;
+}
+
+form label {
+    color: #333;
+}
+
+form input {
+    margin-bottom: 20px;
+    transition: box-shadow .1s;
+}
+
+form input:focus {
+    outline: 0;
+}
+
+form input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    border: solid 1px #ccc;
+    border-radius: 7px;
+    color: #aaa;
+    font-size: 1.3em;
+}
+
+form input[type="text"]:focus {
+    box-shadow: 0 0 5px rgba(39, 93, 254, 0.4);
+}
+
+form input[type="checkbox"] {
+    position: relative;
+    appearance: none;
+}
+
+form input[type="checkbox"]::before {
+    display: inline-block;
+    content: "";
+    width: 28px;
+    height: 28px;
+    transition: background-color .1s;
+    transition: transform .1s;
+    vertical-align: middle;
+    background-color: white;
+    border: solid 1px #ccc;
+    border-radius: 7px;
+}
+
+form input[type="checkbox"]:focus::before {
+    box-shadow: 0 0 5px rgba(39, 93, 254, 0.4);
+}
+
+form input[type="checkbox"]:checked::before {
+    background-color: #275efe;
+}
+
+form input[type="checkbox"]:active::before {
+    transform: scale(0.8);
+}
+
+form input[type="checkbox"]:checked::after {
+    position: absolute;
+    top: 9px;
+    left: 7px;
+    display: inline-block;
+    content: "";
+    width: 50%;
+    height: 25%;
+    transform: rotate(-45deg);
+    border-left: solid 3px white;
+    border-bottom: solid 3px white;
+}
+
+form .checkbox {
+    display: inline-block;
+    padding-right: 30px;
+}
+
+form .result {
+    display: block;
+    padding: 30px 50px;
+    background-color: white;
+    border-radius: 30px;
+}
+
+form output {
+    display: block;
+    margin-bottom: 30px;
+}
+
+form .canvasWrapper {
+    position: relative;
+    overflow-x: scroll;
+}
+
+/* Not useed */
+form .fade::after {
+    content: "";
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 4em;
+    background: linear-gradient(to right, transparent, 70%, white);
+}
+
 #workCanvas {
-    height: 3em;
-    background-color: #1a2638;
+    height: 4em;
+    filter: drop-shadow(0 2px 5px rgba(149, 149, 149, 0.4));
+}
+
+form .result button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+    width: 100%;
+    height: 4em;
+    background-color: #275efe;
+    border: 0;
     border-radius: 10px;
+    color: white;
+    transition: box-shadow .1s;
+    box-shadow: 0 0 5px rgba(149, 149, 149, 0.4);
+}
+
+form .result button:hover {
+    box-shadow: 0 0 5px rgba(39, 93, 254, 0.4);
+}
+
+form .result button .material-symbols-rounded {
+    font-size: 2em;
+}
+
+form .result button .button-text {
+    width: 16em;
+    font-weight: bold;
 }
