--- a/style.css
+++ b/style.css
@@ -4,10 +4,18 @@
 
 body {
     margin: 0;
+    color: #37474F;
+}
+
+a, a:visited {
+    color: #37474F;
 }
 
 header {
-    width: 100vw;
+    position: relative;
+    width: 100%;
+    background-color: white;
+    box-shadow: rgba(149, 149, 149, 0.4) 0 0 5px;
 }
 
 h1 {
@@ -22,12 +30,20 @@ h1::before {
 
 main {
     margin: 0;
+    padding: 0;
+}
+
+section {
+    margin: 0;
     padding: 50px;
+}
+
+.app {
     background-color: #f1f5f9;
 }
 
 form label {
-    color: #333;
+    font-weight: bold;
 }
 
 form input {
@@ -41,11 +57,19 @@ form input:focus {
 
 form input[type="text"] {
     width: 100%;
-    padding: 10px;
+    padding: 10px 15px;
     border: solid 1px #ccc;
     border-radius: 7px;
-    color: #aaa;
     font-size: 1.3em;
+    font-family: "M PLUS 1 Code", monospace;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+form input[type="text"]::placeholder {
+    font-style: italic;
+    color: #ccc;
 }
 
 form input[type="text"]:focus {
@@ -140,16 +164,22 @@ form .result button {
     margin: 10px 0;
     width: 100%;
     height: 4em;
+    cursor: pointer;
     background-color: #275efe;
     border: 0;
     border-radius: 10px;
     color: white;
     transition: box-shadow .1s;
+    transition: transform .1s;
     box-shadow: 0 0 5px rgba(149, 149, 149, 0.4);
 }
 
 form .result button:hover {
     box-shadow: 0 0 5px rgba(39, 93, 254, 0.4);
+}
+
+form .result button:active {
+    transform: scaleX(0.95);
 }
 
 form .result button .material-symbols-rounded {
@@ -159,4 +189,101 @@ form .result button .material-symbols-rounded {
 form .result button .button-text {
     width: 16em;
     font-weight: bold;
+}
+
+.about {
+    background-color: #D6E6F2;
+}
+
+.about p {
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+}
+
+.about a, .about a:visited {
+    padding: 0 .3em;
+    font-weight: bold;
+}
+
+.links {
+    padding-top: 0;
+    background-color: #D6E6F2;
+}
+
+.linksWrapper {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 50px 30px;
+    background-color: white;
+    border-radius: 30px;
+}
+
+.link-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.link-card .zenn-logo {
+    padding: 30px;
+}
+
+.link-card p {
+    margin: 0;
+    padding-bottom: 15px;
+    font-weight: bold;
+}
+
+.link-card p::before, .link-card p::after {
+    content: "";
+    display: inline-block;
+    height: 1.2em;
+    border-left: 2px solid #37474F;
+    vertical-align: middle;
+}
+
+.link-card p::before {
+    transform: translateX(-10px) rotate(-20deg);
+}
+
+.link-card p::after {
+    transform: translateX(10px) rotate(20deg);
+}
+
+.link-card img {
+    object-fit: contain;
+    width: 300px;
+    height: 100px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(149, 149, 149, 0.4);
+    transition: box-shadow .1s;
+}
+
+.link-card img:hover {
+    box-shadow: 0 0 5px rgba(39, 93, 254, 0.4);
+}
+
+footer {
+    padding: 1em;
+}
+
+footer p {
+    margin: 0;
+    text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+    h1 {
+        padding: 20px 30px;
+    }
+
+    section, form .result, .linksWrapper {
+        padding: 30px;
+    }
+
+    .linksWrapper {
+        flex-direction: column;
+    }
 }
